--- a/Hometask7/book_list.html
+++ b/Hometask7/book_list.html
@@ -11,7 +11,7 @@
 			<h1 id="storeTitle">Book Store</h1>
 			<h3 id="description">BOOK LIST</h3>
 			<ul>
-				<li><a href="main.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="contacts.html">Contacts</a></li>
 			</ul>
 			<ul id="bookList">
