--- a/Hometask7/amer_tragedy.html
+++ b/Hometask7/amer_tragedy.html
@@ -11,7 +11,7 @@
 			<h1 id="storeTitle">Book Store</h1>
 			<h3 id="description">American Tragedy</h3>
 			<ul>
-				<li><a href="main.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="book_list.html">Book List</a></li>
 			</ul>
 			<div class="imgBlockDetail">
